# kedros-tuts

./: README.md  pyproject.toml  requirements.txt  stats.json
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
conf/test/: catalog.yml
notebooks/: data-exploration.ipynb  first-exploration.ipynb  model-training.ipynb
src/spaceflights/: __main__.py  settings.py
src/spaceflights/pipelines/data_processing/: nodes.py  pipeline.py
src/spaceflights/pipelines/data_science/: nodes.py  pipeline.py
